# powerpilot

./: .gitignore  Makefile  PHASE1_PLAN.md  README.md  pyproject.toml
data/: com.github.powerpilot.policy  powerpilot-helper  powerpilot.desktop
docs/: CODE_REVIEW.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md
powerpilot/: __init__.py  app.py  battery.py  config.py  hardware.py  inhibitor.py  log.py  notifications.py  profiles.py  switcher.py
powerpilot/backends/: __init__.py  base.py  ppd.py  tlp.py
tests/: conftest.py  test_app.py  test_backends.py  test_battery.py  test_config.py  test_hardware.py  test_inhibitor.py  test_log.py  test_notifications.py  test_profiles.py  test_switcher.py
tlp-profiles/: balanced.conf  performance.conf  power-saver.conf
